<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_entry" translatable="false">EntryActivity</string>
    <string name="title_activity_new_entry">NewEntryActivity</string>

    <string name="food">Food</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="walk">Walk</string>
    <string name="exercise">Exercise</string>
    <string name="other">Other</string>

    <string name="grand">Grand Total</string>
    <string name="average_nki">Average NKI:</string>
    <string name="title_activity_diary">DiaryActivity</string>
    <string name="_0">0</string>
    <string name="kj">kJ</string>

    <string name="edit">Edit</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="activity" translatable="false">Activity</string>
    <string name="previous">previous</string>
    <string name="exit">exit</string>
    <string name="done">Done</string>
    <string name="clear">Clear</string>
</resources>
